--- a/Sistema de Moeda Estudantil/Implementação/front/Empresa.html
+++ b/Sistema de Moeda Estudantil/Implementação/front/Empresa.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dados da Empresa Parceira</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="empresa.css">
 </head>
 <body>
@@ -15,25 +15,16 @@
         </div>
 
         <div class="row mt-4" id="empresas">
-            <div class="col-md-4 mb-4">
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title"></h5>
-                        <p class="card-text"></p>
-                        <button class="btn btn-secondary btn-editar" data-bs-toggle="modal" data-bs-target="#modalEmpresa">Editar</button>
-                        <button class="btn btn-danger btn-deletar" data-bs-toggle="modal" data-bs-target="#modalConfirmarDeletar">Deletar</button>
-                    </div>
-                </div>
-            </div>
+            <!-- Os dados da empresa serão renderizados aqui -->
         </div>
     </div>
 
-    <!-- Modal Cadastrar/Editar Empresa -->
+    <!-- Modal Cadastrar Empresa -->
     <div class="modal fade" id="modalEmpresa" tabindex="-1" aria-labelledby="modalEmpresaLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="modalEmpresaLabel">Cadastrar/Editar Empresa Parceira</h5>
+                    <h5 class="modal-title" id="modalEmpresaLabel">Cadastrar Empresa Parceira</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
@@ -60,9 +51,15 @@
                             <input type="password" class="form-control" id="empresaSenha" required />
                         </div>
 
-                        <div class="mb-3">
-                            <label for="empresaVantagens" class="form-label">Vantagens (separadas por vírgula)</label>
-                            <input type="text" class="form-control" id="empresaVantagens" required />
+                        <div class="mb-3" id="vantagens-container">
+                            <label class="form-label">Vantagens</label>
+                            <div class="vantagem-item mb-3">
+                                <input type="text" class="form-control" placeholder="Descrição da Vantagem" required />
+                                <input type="number" class="form-control" placeholder="Custo da Vantagem" required />
+                                <input type="text" class="form-control" placeholder="URL da Foto" required />
+                                <button type="button" class="btn btn-danger btn-remove-vantagem">Remover</button>
+                            </div>
+                            <button type="button" class="btn btn-success btn-add-vantagem">Adicionar Vantagem</button>
                         </div>
 
                         <button type="submit" class="btn btn-primary">Salvar</button>
@@ -72,27 +69,8 @@
         </div>
     </div>
 
-    <!-- Modal Confirmar Exclusão -->
-    <div class="modal fade" id="modalConfirmarDeletar" tabindex="-1" aria-labelledby="modalConfirmarDeletarLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="modalConfirmarDeletarLabel">Confirmar</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <p>Tem certeza que deseja deletar esta empresa parceira?</p>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-                    <button type="button" class="btn btn-danger" id="confirmarDeletar">Deletar</button>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="empresa.js"></script>
 </body>
 </html>
