--- a/Sistema de Moeda Estudantil/Implementação/front/Professor.html
+++ b/Sistema de Moeda Estudantil/Implementação/front/Professor.html
@@ -3,29 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dados do Aluno</title>
+    <title>Dados do Professor</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="aluno.css">
+    <link rel="stylesheet" href="professor.css">
 </head>
 <body>
     <div class="container my-5">
         <div class="card-name">
-            <h2 class="text-center">Dados do Aluno</h2>
+            <h2 class="text-center">Dados do Professor</h2>
         </div>
 
-        <div class="row mt-4" id="alunos"></div>
+        <div class="row mt-4" id="professores"></div>
     </div>
 
-    <div class="modal fade" id="modalAluno" tabindex="-1" aria-labelledby="modalAlunoLabel" aria-hidden="true">
+    <div class="modal fade" id="modalProfessor" tabindex="-1" aria-labelledby="modalProfessorLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="modalAlunoLabel">Cadastrar/Editar Aluno</h5>
+                    <h5 class="modal-title" id="modalProfessorLabel">Cadastrar/Editar Professor</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <form id="formAluno">
+                    <form id="formProfessor">
                         <button type="submit" class="btn btn-primary">Salvar</button>
                     </form>
                 </div>
@@ -33,18 +33,18 @@
         </div>
     </div>
     <div class="text-center my-4">
-        <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalVantagens">Lista de Vantagens</button>
+        <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalAlunos">Lista de Alunos</button>
     </div>
 
-    <div class="modal fade" id="modalVantagens" tabindex="-1" aria-labelledby="modalVantagensLabel" aria-hidden="true">
+    <div class="modal fade" id="modalAlunos" tabindex="-1" aria-labelledby="modalAlunosLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="modalVantagensLabel">Lista de Vantagens</h5>
+                    <h5 class="modal-title" id="modalAlunosLabel">Lista de Alunos</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <ul id="listaVantagens" class="list-group"></ul>
+                    <ul id="listaAlunos" class="list-group"></ul>
                 </div>
             </div>
         </div>
@@ -52,6 +52,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="aluno.js"></script>
+    <script src="professor.js"></script>
 </body>
 </html>
