--- a/Sistema de Moeda Estudantil/Implementação/front/Empresa.html
+++ b/Sistema de Moeda Estudantil/Implementação/front/Empresa.html
@@ -55,7 +55,7 @@
                             <label class="form-label">Vantagens</label>
                             <div class="vantagem-item mb-3">
                                 <input type="text" class="form-control" placeholder="Descrição da Vantagem" required />
-                                <input type="number" class="form-control" placeholder="Custo da Vantagem" required />
+                                <input type="number" class="form-control" placeholder="Custo da Vantagem" required min="1" />
                                 <input type="text" class="form-control" placeholder="URL da Foto" required />
                                 <button type="button" class="btn btn-danger btn-remove-vantagem">Remover</button>
                             </div>
