--- a/Sistema de Moeda Estudantil/Implementação/front/Professor.html
+++ b/Sistema de Moeda Estudantil/Implementação/front/Professor.html
@@ -13,10 +13,8 @@
         <div class="card-name">
             <h2 class="text-center">Dados do Professor</h2>
         </div>
-
         <div class="row mt-4" id="professores"></div>
     </div>
-
     <div class="modal fade" id="modalProfessor" tabindex="-1" aria-labelledby="modalProfessorLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -34,6 +32,7 @@
     </div>
     <div class="text-center my-4">
         <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalAlunos">Lista de Alunos</button>
+        <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalExtrato">Consultar Extrato</button>
     </div>
 
     <div class="modal fade" id="modalAlunos" tabindex="-1" aria-labelledby="modalAlunosLabel" aria-hidden="true">
@@ -49,6 +48,46 @@
             </div>
         </div>
     </div>
+
+
+
+    <div class="modal fade" id="modalEnviarMoedas" tabindex="-1" aria-labelledby="modalEnviarMoedasLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="modalEnviarMoedasLabel">Enviar Moedas</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form id="formEnviarMoedas">
+                        <div class="mb-3">
+                            <label for="motivo" class="form-label">Motivo</label>
+                            <input type="text" class="form-control" id="motivo" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="valor" class="form-label">Valor</label>
+                            <input type="number" class="form-control" id="valor" required min="1">
+                        </div>
+                        <button type="submit" class="btn btn-primary">Enviar Moedas</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade" id="modalExtrato" tabindex="-1" aria-labelledby="modalExtratoLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="modalExtratoLabel">Extrato do Professor</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <ul id="listaExtrato" class="list-group"></ul>
+                </div>
+            </div>
+        </div>
+    </div>
+    
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
